minor alignment fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -448,9 +448,9 @@ button:focus {
   left: 0;
   right: 0;
   text-align: center;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  -webkit-transform: translateY(-40%);
+  -ms-transform: translateY(-40%);
+  transform: translateY(-40%);
   margin-bottom: 5rem;
 }
 
